add JVM args and update gradle to 5.6