@@ -13,6 +13,10 @@ apply plugin: 'scala'
 group 'uk.gov.hmcts.reform'
 version = '1.0'
 
+tasks.withType(JavaExec) {
+    jvmArgs = ['-Xms1024m', '-Xmx2048m', '-XX:+UseConcMarkSweepGC']
+}
+
 jar {
     manifest {
         attributes 'Implementation-Title': 'Probate  Performance Tests',
